# dirscan

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  README.textile  cleanup  cleanup.py  com.newartisans.cleanup.plist  dirscan.py  flake.nix  lefthook.yml  pyproject.toml  share.py  test_dirscan.py  test_fuzz.py  test_perf.py  verify.py
.github/workflows/: ci.yml
scripts/: check_perf.py
test/: hello.7z  hello.tar  hello.tbz  hello.tgz  m4.dmg  test.py
